--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
 *.backup
-/.vscode
-/build
+.vscode
+build
+
+*.pyc
+site
+__pycache__
+Thumbs.db
+*~
+.cache
+.pytest_cache
+.mypy_cache
+*.egg-info
+htmlcov
+.tox/
+docs/_build
+
