--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -26,6 +26,5 @@ jobs:
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: testing
         run: |
-          cd tests
-          pytest
+          cd tests && pytest
 
